# larcv3

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  GNUmakefile  README.md  configure.sh  data_loader_api.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
larcv/src/: CMakeLists.txt
larcv/src/larcv/: CMakeLists.txt
larcv/src/larcv/core/: CMakeLists.txt
larcv/src/larcv/python/: CMakeLists.txt  setup.py.in
src/: CMakeLists.txt  larcv.cc
src/app/arxiv/ImageAna/: HistADC.cxx  HistTensor.cxx
src/app/datagenerator/: GNUmakefile  datagenerator.i
src/app/filter/: CMakeLists.txt  EmptyImageFilter.cxx  EmptyTensorFilter.cxx  MCSingleParticleFilter.cxx  ParticleCountFilter.cxx  QSumFilter.cxx
src/app/filter/arxiv/: CCIncFilter.cxx  CCQETruthFilter.cxx  CosmicFilter.cxx  EventIDFilter.cxx  MCFilter.cxx  MCROIHack.cxx  NuFilter.cxx  ROISizeFilter.cxx  VtxInRegion.cxx
src/app/imagemod/: CMakeLists.txt  Downsample.cxx  Image2DFromTensor2D.cxx  Tensor2DFromImage2D.cxx  TensorFromCluster.cxx  Threshold.cxx
src/app/imagemod/unported/: ADCScale.cxx  ADCThreshold.cxx  BBoxFromCluster3D.cxx  Binarize.cxx  BlurCluster3D.cxx  BlurTensor3D.cxx  Cluster2DFromCluster3D.cxx  Cluster3DCompressor.cxx  CombineImages.cxx  CombineTensor3D.cxx  CropBBox2D.cxx  ImageCompressor.cxx  ImageMod.cxx  MCTrackFix.cxx  MaskImage2D.cxx  MaskTensor3D.cxx  MultiPartSegFromCluster2dParticle.cxx  NormalizeTensor3D.cxx  OneParticleTensor.cxx  PPNParticleRemover.cxx  ParticleBBoxFromCluster.cxx  ParticleCorrector.cxx  RemoveDetectorInfo.cxx  ResizeImage.cxx  ScaleTensor.cxx  SegLabelFiveTypes.cxx  SegLabelFromCluster3D.cxx  SegWeightInstance2D.cxx  SegWeightInstance3D.cxx  Segment2DFromPDG.cxx  SimCoefficient.cxx  SparcifyImage2D.cxx  Tensor2DFromTensor3D.cxx  Tensor3DCompressor.cxx  Tensor3DFromCluster3D.cxx  ThresholdCluster3D.cxx  ThresholdTensor3D.cxx  VertexLabel3D.cxx  VertexWeight3D.cxx  WireMask.cxx  (+1 more)
src/app/merger/: DataStream.cxx  ImageHolder.cxx  ImageMerger.cxx  MergeTwoStream.cxx
src/app/next_image_mod/: Cropper.cxx  Labeler.cxx  ReSample.cxx
src/app/queueio/: BatchData.cxx  BatchDataQueue.cxx  BatchDataQueueFactory.cxx  BatchFillerBBox.cxx  BatchFillerPIDLabel.cxx  BatchFillerSparseTensor.cxx  BatchFillerTemplate.cxx  BatchFillerTensor.cxx  BatchHolder.cxx  CMakeLists.txt  QueueIOTypes.cxx  QueueProcessor.cxx  queueio.cxx
src/app/queueio/deprecated/: BatchDataStorage.cxx  BatchDataStorageFactory.cxx  BatchFillerImage2D.cxx  BatchFillerMultiLabel.cxx  RandomCropper.cxx  ThreadProcessor.cxx
src/app/sbnd_imagemod/: CMakeLists.txt  CompressAndEmbed.cxx  CosmicNeutrinoSegLabel.cxx  EventPIDLabel.cxx  ParentParticleSeg.cxx  sbnd_imagemod.i  sbnd_imagemod.wrapper
src/app/sbnd_imagemod/deprecated/: CropNeutrino2D.cxx  CropNeutrino3D.cxx  LeptonSegLabel.cxx  LeptonSegLabel3D.cxx
src/core/: CMakeLists.txt
src/core/base/: CMakeLists.txt  ConfigManager.cxx  GNUmakefile  LArCVBaseUtilFunc.cxx  PSet.cxx  Parser.cxx  Watch.cxx  base.cxx  base.i  larbys.cxx  larcv_base.cxx  larcv_logger.cxx
src/core/dataformat/: BBox.cxx  CMakeLists.txt  DataFormatTypes.cxx  DataFormatTypes.h  DataProductFactory.cxx  DataProductFactory.h  EventBBox.cxx  EventBase.cxx  EventBase.h  EventID.cxx  EventID.h  EventParticle.cxx  EventParticle.h  EventSparseCluster.cxx  EventSparseTensor.cxx  EventTensor.cxx  EventVoxel2D.cxx  EventVoxel2D.h  EventVoxel3D.cxx  EventVoxel3D.h  GNUmakefile  IOManager.cxx  IOManager.h  ImageMeta.cxx  Particle.cxx  Particle.h  Point.cxx  Tensor.cxx  Vertex.cxx  Vertex.h  Voxel.cxx  dataformat.cxx  dataformat.i  schema.md  test_io.py
src/core/dataformat/include/: EventBase.h  EventVoxel3D.h  Voxel.h
src/core/dataformat/src/: IOManager.cxx  Voxel.cxx
src/core/dataformat/temporary_deprecation/: ImageMeta.h  Voxel2D.cxx  VoxelMeta.h
src/core/processor/: CMakeLists.txt  GNUmakefile  ProcessBase.cxx  ProcessDriver.cxx  ProcessFactory.cxx  processor.cxx
src/core/pyutil/: CMakeLists.txt  PyUtils.cxx  load_pyutil.cxx  pyutil.wrapper
src/docs/: CMakeLists.txt  Doxyfile.in  FindSphinx.cmake  conf.py  index.rst
src/larcv/: CMakeLists.txt
src/larcv/app/: CMakeLists.txt
src/larcv/app/datagenerator/: CMakeLists.txt  GenFakeParticle.cxx  GenFakeParticle.h
src/larcv/app/filter/: CMakeLists.txt  EmptyImageFilter.cxx  EmptyImageFilter.h  EmptyTensorFilter.cxx  EmptyTensorFilter.h  EventIDFilter.cxx  EventIDFilter.h  MCSingleParticleFilter.cxx  MCSingleParticleFilter.h  ParticleCountFilter.cxx  ParticleCountFilter.h  QSumFilter.cxx  QSumFilter.h  filter.i
src/larcv/app/threadio/: BatchData.h  BatchDataStorage.cxx  BatchDataStorage.h  BatchFillerBBox2D.cxx  BatchFillerBBox2D.h  BatchFillerImage2D.h  BatchFillerMultiLabel.cxx  BatchFillerPIDLabel.h  BatchFillerPPN.cxx  BatchFillerSparseCluster2D.cxx  BatchFillerSparseTensor2D.cxx  BatchFillerSparseTensor2D.h  BatchFillerSparseTensor3D.cxx  BatchFillerTemplate.cxx  BatchFillerTensor2D.h  BatchFillerTensor3D.cxx  RandomCropper.cxx  RandomCropper.h  ThreadProcessor.cxx
src/larcv/core/: CMakeLists.txt
src/larcv/core/PyUtil/: PyCluster3DMaker.cxx  PyCluster3DMaker.h  PyImageMaker.cxx  PyImageStitcher.h
src/larcv/core/base/: CMakeLists.txt  ConfigManager.cxx  ConfigManager.h  LArCVBaseUtilFunc.cxx  LArCVBaseUtilFunc.h  LArCVTypes.h  Makefile  PSet.cxx  PSet.h  Parser.cxx  Parser.h  Watch.h  base.i  larbys.h  larcv_base.h  larcv_logger.cxx  larcv_logger.h
src/larcv/core/cpputil/: CSVReader.h  RandomGaus.cxx  cpputil.i
src/larcv/core/dataformat/: BBox.cxx  BBox.h  CMakeLists.txt  DataFormatTypes.cxx  DataFormatTypes.h  DataProductFactory.cxx  DataProductFactory.h  EventBase.h  EventID.cxx  EventImage2D.cxx  EventImage2D.h  EventParticle.cxx  EventParticle.h  EventSparse.cxx  EventSparse.h  EventVoxel.cxx  EventVoxel.h  GNUmakefile  IOManager.cxx  IOManager.h  Image.cxx  Image.h  Image2D.cxx  Image2D.h  ImageMeta.cxx  ImageMeta.h  Particle.cxx  Point.h  (+12 more)
src/larcv3/: CMakeLists.txt  larcv.cxx  larcv.i
src/larcv3/app/: CMakeLists.txt
src/larcv3/core/: CMakeLists.txt
src/swig/: base.py  larcv.i  larcv.py  larcv_wrap.cxx
(+534 files in other folders)
